--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://rayaritra225:aritra123@cluster0.attmgiz.mongodb.net
+MONGODB_URI=mongodb+srv://nilanjana:nila123@cluster0.5sjowcq.mongodb.net
 
 CLERK_PUBLISHABLE_KEY=pk_test_ZnVubnktYm94ZXItNzAuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_i8mKb46RWIS5l05WQDGps8VrTeAUH5LJApwp2C7TLI
